<resources>
    <string name="app_name">LForever</string>

    <!-- 基本常用词-->
    <string name="sign_in">签到</string>
    <string name="am">美</string>
    <string name="en">英</string>
    <string name="add_to_collect">加入我的单词书</string>
    <string name="add_to_recite">加入每日背记计划</string>

    <!--导航页-->
    <string name="guide_activity_experience_immediately">立即体验</string>

    <!--tabLayout-->
    <string name="home_first">首页</string>
    <string name="home_study">学习</string>
    <string name="home_activity">活动</string>
    <string name="home_account">账户</string>

    <!--登录页-->
    <string name="login_fragment_title_text_view">登录</string>
    <string name="register_fragment_title_text_view">注册</string>
    <string name="forget_pwd_fragment_title_txet_view">重设密码</string>
    <string name="register_immediately_tip">立即注册</string>
    <string name="login_tip">登录</string>
    <string name="login_by_account_pwd">账号密码登录</string>
    <string name="login_by_verification_code">验证码快速登录</string>
    <string name="forget_pwd_tip">忘记密码</string>
    <string name="get_phone_verification_code">|    获取验证码</string>
    <string name="other_login_way">第三方登录</string>
    <string name="account_pwd_login_btn_bottom_tip">新用户或忘记密码,请使用验证码快速登录</string>
    <string name="user_account_hint">手机号码/邮箱</string>
    <string name="user_pwd_hint">密码</string>
    <string name="user_verification_code_hint">验证码</string>
    <string name="user_agreement_regulations">同意隐私政策及服务条款</string>

    <!--首页-->
    <string name="fist_title_time_say_hello">上午好,15851878566</string>
    <string name="first_today_target">今日目标</string>
    <string name="first_today_already_completed_number">今日完成数量</string>
    <string name="first_today_execution">今日进度</string>
    <string name="first_white_wall">表\n白\n墙</string>

    <!--表白墙-->
    <string name="white_wall_user_pet_name">NightStalker</string>
    <string name="white_wall_default_comment">小哥哥小姐姐，大家一起加油呀！</string>

    <!--等级-->
    <string name="level">LEV:</string>
    <string name="level_one">小白</string>
    <string name="level_two">书童</string>
    <string name="level_three">秀才</string>
    <string name="level_four">举人</string>
    <string name="level_five">进士</string>
    <string name="level_six">状元</string>

    <!--首页功能列表-->
    <string name="function_love">恋人</string>
    <string name="function_partner">学伴</string>
    <string name="function_friends">好友</string>
    <string name="function_white_wall">表白墙</string>
    <string name="function_message">消息</string>
    <string name="function_study_statics">数据统计</string>
    <string name="function_medal">个人成就</string>
    <string name="function_shop">积分商城</string>
    <string name="function_regional_ranking">地区排名</string>

    <!--学习页功能列表-->
    <string name="study_function_recite">背记单词</string>
    <string name="study_function_recite_letter">R</string>
    <string name="study_function_select_word">自主选词</string>
    <string name="study_function_select_word_letter">S</string>
    <string name="study_function_query_word">单词查询</string>
    <string name="study_function_query_word_letter">Q</string>
    <string name="study_function_data">学习数据</string>
    <string name="study_function_data_letter">D</string>
    <string name="study_function_test">词汇量测试</string>
    <string name="study_function_test_letter">T</string>
    <string name="study_function_pk">单词PK</string>
    <string name="study_function_pk_letter">PK</string>
    <string name="study_function_gamble">擂台挑战</string>
    <string name="study_function_gamble_letter">G</string>
    <string name="study_function_my_word_book">我的单词本</string>
    <string name="study_function_my_word_book_letter">W</string>

    <!--账户页功能列表-->
    <string name="account_function_personal_info">个人信息</string>
    <string name="account_function_personal_info_letter">P</string>
    <string name="account_function_personal_plan">个性化定制</string>
    <string name="account_function_personal_plan_letter">P</string>
    <string name="account_function_safety_center">安全中心</string>
    <string name="account_function_safety_center_letter">S</string>
    <string name="account_function_help_center">帮助中心</string>
    <string name="account_function_help_center_letter">H</string>

    <!--个人信息-->
    <string name="personal_info_account">账号</string>
    <string name="personal_info_pet_name">昵称</string>
    <string name="personal_info_level">等级</string>
    <string name="personal_info_sex">性别</string>
    <string name="personal_info_birthday">出生日</string>
    <string name="personal_info_weixin">微信绑定</string>
    <string name="personal_info_qq">QQ绑定</string>
    <string name="personal_info_mail">邮箱绑定</string>
    <string name="personal_info_sign_word">个性签名</string>

    <!--学习计划-->
    <string name="personal_plan_day_target_number">每日任务量</string>
    <string name="personal_plan_remind_time">每日提醒时间</string>

    <!--安全中心-->
    <string name="safety_center_edit_pwd">修改密码</string>
    <string name="safety_center_login_out">退出登录</string>

    <!--帮助中心-->
    <string name="help_center_about_use">使用了解</string>
    <string name="help_center_about_us">关于我们</string>
    <string name="help_center_about_forgetting_curve">遗忘曲线</string>
    <string name="help_center_submit_comment">提交反馈</string>

    <!--查询单词-->
    <string name="query_word_query">查询</string>

    <!--选择单词页-->
    <string name="select_word_list_select">顺选</string>
    <string name="select_word_random_select">随机</string>
    <string name="select_word_commit">确定</string>
    <string name="select_word_selected_word_number">已选 0</string>
    <string name="select_word_recommend_word_number">建议选</string>

    <!-- 背记单词页-->
    <string name="sure">确定</string>
    <string name="not_sure">不确定</string>

    <!-- 下一轮-->
    <string name="next_recite">开始下一轮</string>
    <string name="next_recite_complete_word">完成单词：</string>
    <string name="next_recite_surplus_word">剩余单词：</string>
    <string name="next_recite_random_test">抽查测试</string>

    <!--测试单词词汇量-->
    <string name="number_test_tip">
        为了确保测试结果真实，凡是不确定的词汇请选择不认识，凭猜测的正确答案与真实词汇量无关！
        \n\n该测试结果仅供参考！要一次性测试完毕才可以记录分数哦！
        \n\n词汇等级划分：\n
        中考词汇\t&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;1500-1600\t\n
        高考词汇\t&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;3000-3500\t\n
        四级词汇\t&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4000-4500\t\n
        六级词汇\t&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;5500-6000\t\n
        专业四级\t&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6000-7000\t\n
        专业八级\t&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;10000-120000\t\n
        </string>
    <string name="number_test_start_test">开始测试</string>
    <string name="number_test_next_word">下一个</string>
    <string name="number_test_not_know">不认识</string>
    <string name="number_test_last_time_test_number">您上次测试的词汇量为：%s</string>
    <string name="number_test_score">当前得分为：%s</string>
    <string name="number_test_come_on">您上次测试的词汇量为：%s\n当前您的词汇量得分为：%s\n要继续加油哦！</string>
    <string name="number_test_record_this_score">记录分数</string>

</resources>
