<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_white">

        <include
            android:id="@+id/select_word_title_layout"
            layout="@layout/common_activity_title_layout" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/select_word_tablayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/select_word_title_layout"
            app:tabIndicatorColor="@color/dark_cyan" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/select_word_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/select_word_bottom_layout"
            android:layout_below="@id/select_word_tablayout" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_above="@+id/select_word_bottom_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/layout_margin_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/layout_circular_dark_cyan_50"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/select_word_tv_selected_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:text="@string/select_word_selected_word_number"
                android:textColor="@color/text_dark_black"
                android:textSize="@dimen/text_size_14" />

            <include layout="@layout/line_vertical_black" />

            <TextView
                android:id="@+id/select_word_tv_recommend_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center_vertical"
                android:text="建议选 50"
                android:textColor="@color/text_dark_black"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/select_word_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <include
                android:id="@+id/select_word_line"
                layout="@layout/line_horizontal_dark_cyan" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/select_word_layout_list_select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:foreground="@drawable/ripple_forground"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@mipmap/icon_list_select_dark_cyan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/select_word_list_select"
                        android:textColor="@color/text_dark_cyan"
                        android:textSize="@dimen/text_size_18"
                        android:textStyle="bold" />

                </LinearLayout>

                <include layout="@layout/line_vertical_dark_cyan" />

                <LinearLayout
                    android:id="@+id/select_word_layout_random_select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:foreground="@drawable/ripple_forground"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@mipmap/icon_random_dark_cyan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/select_word_random_select"
                        android:textColor="@color/text_dark_cyan"
                        android:textSize="@dimen/text_size_18"
                        android:textStyle="bold" />

                </LinearLayout>

                <include layout="@layout/line_vertical_dark_cyan" />

                <LinearLayout
                    android:id="@+id/select_word_layout_commit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:foreground="@drawable/ripple_forground"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@mipmap/icon_tick_dark_cyan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/select_word_commit"
                        android:textColor="@color/text_dark_cyan"
                        android:textSize="@dimen/text_size_18"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <include
        layout="@layout/common_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>